refactor: Edição do notebook

--- a/4_classificacao.ipynb
+++ b/4_classificacao.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNaPmzU8xd5YlZpmcX9LPi9",
+      "authorship_tag": "ABX9TyPXw+pIKPFc8wAX1prtzOTe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Importando bibliotecas"
+        "### Importando bibliotecas<hr style='border: 2px solid red;'>\n"
       ],
       "metadata": {
         "id": "Boq31Ihrg5nH"
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "7o0jRmhPCoHv"
       },
@@ -67,13 +67,13 @@
       "metadata": {
         "id": "0XUeMvn3g0MM"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "### Conectando no ambiente que será utilizado"
+        "### Conectando no ambiente que será utilizado<hr style='border: 2px solid red;'>\n"
       ],
       "metadata": {
         "id": "I5BaqyiBg-iC"
@@ -96,7 +96,7 @@
         },
         "outputId": "86dc070a-d58f-4ed4-a973-2fb2ad5fa997"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -110,7 +110,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Leitura dos dados <hr style='border: 2px solid red;'>"
+        "#### Leitura dos dados"
       ],
       "metadata": {
         "id": "cDpmZ-c7hCYk"
@@ -125,7 +125,25 @@
       "metadata": {
         "id": "oVt8pUk4Ct1p"
       },
-      "execution_count": 4,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "2lWTBi_hfit6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ZrSL8gNQfi7K"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -140,7 +158,7 @@
         },
         "outputId": "4a2626a6-f365-4f9d-d82a-a7837ffda7d8"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -167,7 +185,7 @@
         "id": "Hy59bsliXbl3",
         "outputId": "1eab8580-5f30-4a6a-e0f8-4914c046c61c"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -570,7 +588,7 @@
       "metadata": {
         "id": "1-2PYC5MC34J"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -599,7 +617,7 @@
       "metadata": {
         "id": "CBoyMJTI4_1K"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -615,7 +633,7 @@
         "id": "HOxndDsk3H7Z",
         "outputId": "0a061da3-2e61-4fcf-bdc3-cccdd713d8e9"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -638,7 +656,7 @@
       "metadata": {
         "id": "RvuOFAmR42aw"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -649,7 +667,7 @@
       "metadata": {
         "id": "YoFdm3F042x5"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -665,7 +683,7 @@
         "id": "WFWfOdaT5Ld5",
         "outputId": "7180d06f-54e9-4ee8-cb7d-9ed954f612e2"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -697,7 +715,7 @@
       "metadata": {
         "id": "v9VTOQFs4Vhw"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -715,7 +733,7 @@
         "id": "OBoj3dEaFePY",
         "outputId": "623fed86-c3ca-406b-b334-a6eca4cb9810"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -743,7 +761,7 @@
       "metadata": {
         "id": "5xgqifU6qFVp"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -757,7 +775,7 @@
       "metadata": {
         "id": "jI5LHFzfp6VI"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -778,7 +796,7 @@
       "metadata": {
         "id": "jiht0Hz-tJfR"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -791,7 +809,7 @@
       "metadata": {
         "id": "R8LGbTiztBKZ"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -804,7 +822,7 @@
       "metadata": {
         "id": "ClFvCjagtGSw"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -825,7 +843,7 @@
       "metadata": {
         "id": "zF1UtBTUD7w4"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -838,7 +856,7 @@
       "metadata": {
         "id": "lWWTdtiwD-Cg"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -859,7 +877,7 @@
       "metadata": {
         "id": "kmsmpRScgmKv"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -872,7 +890,7 @@
       "metadata": {
         "id": "VUCdSZaAgXGH"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -904,7 +922,7 @@
       "metadata": {
         "id": "Zo8cPJgLIZyz"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -917,7 +935,7 @@
       "metadata": {
         "id": "eGzzEYTMINB7"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -930,7 +948,7 @@
       "metadata": {
         "id": "4MkMrbhWL4l7"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -943,7 +961,7 @@
       "metadata": {
         "id": "rwQSboHTND5D"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -956,7 +974,7 @@
       "metadata": {
         "id": "DKsEsJAQOWZX"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -977,7 +995,7 @@
       "metadata": {
         "id": "7a2f9FyLzFwJ"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -990,7 +1008,7 @@
       "metadata": {
         "id": "mOQkXElJtvl4"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1011,7 +1029,7 @@
       "metadata": {
         "id": "egy9idt68H5q"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1027,7 +1045,7 @@
         "id": "C2wuAVu14jE-",
         "outputId": "93269071-2c36-4d59-8ae4-9432a272613b"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1402,7 +1420,7 @@
       "metadata": {
         "id": "qWGR61OC4jIV"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1420,7 +1438,7 @@
       "metadata": {
         "id": "IWEZXYXi4jUl"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1438,7 +1456,7 @@
       "metadata": {
         "id": "wNAXAZGa7cMX"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1451,7 +1469,7 @@
       "metadata": {
         "id": "P4ROF4py72qG"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1480,7 +1498,7 @@
       "metadata": {
         "id": "Pclv3Lkm8uYn"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1505,7 +1523,7 @@
         "id": "1Mj14JAeHbnR",
         "outputId": "dc3082a5-b4de-494d-f548-9683781ecefd"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1551,7 +1569,7 @@
           "height": 359
         }
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1605,7 +1623,7 @@
           "height": 446
         }
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1644,7 +1662,7 @@
           "height": 490
         }
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1683,7 +1701,7 @@
           "height": 490
         }
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1737,7 +1755,7 @@
       "metadata": {
         "id": "hDmjHXMgIqvw"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1764,7 +1782,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1814,7 +1832,7 @@
       "metadata": {
         "id": "TT017i1SOOC0"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1841,7 +1859,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1890,7 +1908,7 @@
       "metadata": {
         "id": "WwGGFyVrCt2y"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     }
   ]
