refactor: Edição do notebook

--- a/3_visualização.ipynb
+++ b/3_visualização.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMs+R+bO//HG305pZ4z54wQ",
+      "authorship_tag": "ABX9TyMTWc/tGeslNOKTM7eAhcwZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,13 +23,13 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ascle/colab_tcc2/blob/main/3_visualiza%C3%A7%C3%A3o.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ascle/colab_tcc2/blob/dev/3_visualiza%C3%A7%C3%A3o.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "### Importando bibliotecas"
+        "### Importando bibliotecas<hr style='border: 2px solid red;'>"
       ],
       "metadata": {
         "id": "Boq31Ihrg5nH"
@@ -53,7 +53,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Conectando no ambiente que será utilizado"
+        "### Conectando no ambiente que será utilizado <hr style='border: 2px solid red;'>"
       ],
       "metadata": {
         "id": "I5BaqyiBg-iC"
@@ -90,7 +90,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Outras configurações\n",
+        "### Outras configurações <hr style='border: 2px solid red;'>\n",
         "\n"
       ],
       "metadata": {
@@ -112,7 +112,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Leitura dos dados"
+        "### Leitura dos dados <hr style='border: 2px solid red;'>"
       ],
       "metadata": {
         "id": "cDpmZ-c7hCYk"
@@ -557,7 +557,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Separando a base de dados entre variáveis e target"
+        "### Separando a base de dados entre variáveis e target<hr style='border: 2px solid red;'>"
       ],
       "metadata": {
         "id": "y3IfGhEx2Yuy"
@@ -603,7 +603,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Visualização das variáveis"
+        "### Visualização das variáveis <hr style='border: 2px solid red;'>"
       ],
       "metadata": {
         "id": "p6344E8L2zQz"
@@ -758,7 +758,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Visualizações do target"
+        "## Visualizações do target <hr style='border: 2px solid red;'>"
       ],
       "metadata": {
         "id": "uZGz4BtYdjVh"
@@ -838,7 +838,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Visualização target X vaiáveis"
+        "### Visualização target X vaiáveis <hr style='border: 2px solid red;'>"
       ],
       "metadata": {
         "id": "8OhMUJQPVxUS"
