feat: melhor modelo

--- a/5_modelagem-classificacao_1.ipynb
+++ b/5_modelagem-classificacao_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOGWakXs5o8Gm5sPlckyPBT",
+      "authorship_tag": "ABX9TyNj0/THWErF12nxnGB2mzjK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "7o0jRmhPCoHv"
       },
@@ -67,7 +67,7 @@
       "metadata": {
         "id": "0XUeMvn3g0MM"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -96,7 +96,7 @@
         },
         "outputId": "d8a600dd-6125-4eab-d835-7a14381f2f58"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -125,7 +125,7 @@
       "metadata": {
         "id": "oVt8pUk4Ct1p"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -140,7 +140,7 @@
         },
         "outputId": "61ec8db9-5f0b-4f39-e959-759bf9752926"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -167,7 +167,7 @@
         "id": "Hy59bsliXbl3",
         "outputId": "4f61873b-893f-41f4-981b-d849fecbbdf6"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -570,7 +570,7 @@
       "metadata": {
         "id": "1-2PYC5MC34J"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -599,7 +599,7 @@
       "metadata": {
         "id": "CBoyMJTI4_1K"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -615,7 +615,7 @@
         "id": "HOxndDsk3H7Z",
         "outputId": "13b0398a-b42c-4581-ce1d-9330392b9ceb"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -638,7 +638,7 @@
       "metadata": {
         "id": "RvuOFAmR42aw"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -649,7 +649,7 @@
       "metadata": {
         "id": "YoFdm3F042x5"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -665,7 +665,7 @@
         "id": "WFWfOdaT5Ld5",
         "outputId": "b5bb5e3d-7304-47e6-9243-41cf49d0a817"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -697,7 +697,7 @@
       "metadata": {
         "id": "v9VTOQFs4Vhw"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -715,7 +715,7 @@
         "id": "OBoj3dEaFePY",
         "outputId": "edbc125e-fcca-4bf2-9886-af5872e2709b"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -743,7 +743,7 @@
       "metadata": {
         "id": "5xgqifU6qFVp"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -757,7 +757,7 @@
       "metadata": {
         "id": "jI5LHFzfp6VI"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -778,7 +778,7 @@
       "metadata": {
         "id": "jiht0Hz-tJfR"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -791,7 +791,7 @@
       "metadata": {
         "id": "R8LGbTiztBKZ"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -804,7 +804,7 @@
       "metadata": {
         "id": "ClFvCjagtGSw"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -825,7 +825,7 @@
       "metadata": {
         "id": "kmsmpRScgmKv"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -838,7 +838,7 @@
       "metadata": {
         "id": "VUCdSZaAgXGH"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -870,7 +870,7 @@
       "metadata": {
         "id": "Zo8cPJgLIZyz"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -896,7 +896,7 @@
       "metadata": {
         "id": "4MkMrbhWL4l7"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -909,7 +909,7 @@
       "metadata": {
         "id": "rwQSboHTND5D"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -922,7 +922,7 @@
       "metadata": {
         "id": "DKsEsJAQOWZX"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -943,7 +943,7 @@
       "metadata": {
         "id": "7a2f9FyLzFwJ"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -956,7 +956,7 @@
       "metadata": {
         "id": "mOQkXElJtvl4"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -977,7 +977,7 @@
       "metadata": {
         "id": "plwEWsr5Dnts"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -990,7 +990,7 @@
       "metadata": {
         "id": "h9CkJBzHDnwh"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1020,7 +1020,7 @@
       "metadata": {
         "id": "Pclv3Lkm8uYn"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1045,7 +1045,7 @@
         "id": "1Mj14JAeHbnR",
         "outputId": "ca8cbf3a-4d84-4f35-97f7-6fd5ab80a692"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1114,7 +1114,7 @@
           "height": 339
         }
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1164,7 +1164,7 @@
           "height": 359
         }
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1218,7 +1218,7 @@
         },
         "outputId": "2411d751-cbc1-4b21-c7b6-66b2abe34f9b"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1288,7 +1288,7 @@
           "height": 426
         }
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1334,7 +1334,7 @@
         },
         "outputId": "b5443d7e-ec45-4e5a-a8c5-384f58baf85e"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1388,7 +1388,7 @@
           "height": 426
         }
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1442,7 +1442,7 @@
       "metadata": {
         "id": "hDmjHXMgIqvw"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1468,7 +1468,7 @@
         },
         "outputId": "86c30e28-3b20-4548-d18b-0e8caa821d78"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1517,7 +1517,7 @@
       "metadata": {
         "id": "TT017i1SOOC0"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1543,7 +1543,7 @@
         },
         "outputId": "f9821e09-ca86-4512-8fce-deef7ed4923b"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1587,7 +1587,7 @@
       "metadata": {
         "id": "zzuOm8_sohLI"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1613,7 +1613,7 @@
         "id": "fjQ_mP1PoFec",
         "outputId": "2f3401ee-fcea-4170-de8d-dcfacad15da2"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1649,7 +1649,7 @@
       "metadata": {
         "id": "Lml2SSAtoxNA"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1675,7 +1675,7 @@
         "id": "pLFGUITVoxQf",
         "outputId": "67bc328e-81bd-4f10-bd04-3d66f0ce8d2c"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1706,20 +1706,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Random Forest"
+        "**Random Forest**\n",
+        "\n",
+        "Acurácia: 99.77%\n",
+        "\n",
+        "Precisão: 99.84%\n",
+        "\n",
+        "Recall: 99.71%\n",
+        "\n",
+        "F1: 99.77%"
       ],
       "metadata": {
         "id": "HVfW-VdCuS9J"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "264sOi8SuUL8"
-      },
-      "execution_count": 43,
-      "outputs": []
     }
   ]
 }
